# papyrus-parser

./: .gitignore  CODE_REVIEW.md  CODE_REVIEW_CN.md  DOCUMENTATION_INDEX.md  LICENSE  MCP_SETUP.md  MCP_SETUP_CN.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_CN.md  QUICKSTART.md  QUICKSTART_CN.md  README.md  USAGE_WITH_AGENTS.md  USAGE_WITH_AGENTS_CN.md  install.sh  pyproject.toml  requirements.txt  setup-unix.sh  setup-windows.ps1  test_sample.md
.github/workflows/: tests.yml
papyrus/: __init__.py  __main__.py  cache.py  cli.py  config_manager.py  detector.py  errors.py  images.py  mcp_server.py  metadata.py  progress.py  router.py  settings.py  shebang.py  utils.py
papyrus/parsers/: __init__.py  fast_path.py  heavy_path.py
tests/: test_cache.py  test_cli.py  test_config_manager.py  test_detector.py  test_errors.py  test_fast_path.py  test_images.py  test_mcp_server.py  test_progress.py  test_settings.py  test_shebang.py
